update and fix integration test
Signed-off-by: Etienne LESOT <etienne.lesot@rte-france.com>