@@ -1,9 +1,3 @@
-/*
-  Copyright (c) 2022, RTE (http://www.rte-france.com)
-  This Source Code Form is subject to the terms of the Mozilla Public
-  License, v. 2.0. If a copy of the MPL was not distributed with this
-  file, You can obtain one at http://mozilla.org/MPL/2.0/.
- */
 package org.gridsuite.bddtests.common;
 
 import com.fasterxml.jackson.databind.JsonNode;
@@ -15,9 +9,6 @@ import org.gridsuite.bddtests.study.StudyRequests;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
 import java.time.Duration;
@@ -31,7 +22,22 @@ public class TestContext {
 
     public enum Computation {
         LOADFLOW,
-        SECURITY_ANALYSIS
+        SECURITY_ANALYSIS,
+        SENSITIVITY_ANALYSIS,
+    }
+
+    // cf same Enum in study-server
+    public enum ReportType {
+        NETWORK_MODIFICATION("NetworkModification"),
+        LOADFLOW("LoadFlow"),
+        SECURITY_ANALYSIS("SecurityAnalysis"),
+        SENSITIVITY_ANALYSIS("SensitivityAnalysis");
+
+        public final String messageKey;
+
+        ReportType(String messageKey) {
+            this.messageKey = messageKey;
+        }
     }
 
     public static class Node {
@@ -44,54 +50,89 @@ public class TestContext {
         public String studyId;
     }
 
+    public static class RootNetwork {
+        public RootNetwork(String rootNetworkUuid, String studyUuid) {
+            this.rootNetworkUuid = rootNetworkUuid;
+            this.name = studyUuid;
+        }
+
+        public String rootNetworkUuid;
+        public String name;
+    }
+
     // set of element alias/name and their uuid, we want to use/memorise during a whole scenario, between the steps
     private Map<String, String> currentDirectoryIds;
     private Map<String, String> currentStudyIds;
     private Map<String, String> currentCaseIds;
     private Map<String, Node> currentNodeIds;
+    private Map<String, RootNetwork> currentRootNetworkIds;
     private Map<String, String> currentContingencyListIds;
     private Map<String, String> currentFilterIds;
     private Map<String, JsonNode> currentJsonData;
+    private Map<String, Integer> configIntParameters;
+    private Map<String, JsonNode> currentCaseExtensions;
     // a tmp dir uuid possibly associated to a scenario
     private String tmpRootDirId = null;
 
     // CONSTANTS:
-    public static final ArrayList<String> LOADFLOW_PROVIDERS = new ArrayList<>(Arrays.asList("Hades2", "OpenLoadFlow"));
-    public static final int MAX_WAITING_TIME_IN_SEC = 120;
+    // TODO providers could be retrieved with get request
+    public static final ArrayList<String> LOADFLOW_PROVIDERS = new ArrayList<>(List.of("OpenLoadFlow"));
+    public static final ArrayList<String> SENSITIVITY_PROVIDERS = new ArrayList<>(List.of("OpenLoadFlow"));
+    public static final int MAX_WAITING_TIME_IN_SEC = 180;
     public static final int MAX_COMPUTATION_WAITING_TIME_IN_SEC = 300;
+    public static final int MAX_EXPORT_WAITING_TIME_IN_SEC = 150;
     public static final String CURRENT_ELEMENT = "current";
 
     // types allowed in step : get "type" equipment "id" , and their corresponding Powsybl type used by search
-    public static final Map<String, String> EQPT_TYPES_1 = Map.ofEntries(
-            new AbstractMap.SimpleEntry<>("lines", "LINE"),
-            new AbstractMap.SimpleEntry<>("2-windings-transformers", "TWO_WINDINGS_TRANSFORMER"),
-            new AbstractMap.SimpleEntry<>("generators", "GENERATOR"),
-            new AbstractMap.SimpleEntry<>("loads", "LOAD"),
-            new AbstractMap.SimpleEntry<>("voltage-levels", "VOLTAGE_LEVEL"),
-            new AbstractMap.SimpleEntry<>("substations", "SUBSTATION"),
-            new AbstractMap.SimpleEntry<>("shunt-compensators", "SHUNT_COMPENSATOR")
+    public static final Map<String, String> EQPT_TYPES = Map.ofEntries(
+            Map.entry("lines", "LINE"),
+            Map.entry("2-windings-transformers", "TWO_WINDINGS_TRANSFORMER"),
+            Map.entry("generators", "GENERATOR"),
+            Map.entry("loads", "LOAD"),
+            Map.entry("voltage-levels", "VOLTAGE_LEVEL"),
+            Map.entry("substations", "SUBSTATION"),
+            Map.entry("shunt-compensators", "SHUNT_COMPENSATOR"),
+            Map.entry("vsc-converter-stations", "VSC_CONVERTER_STATION"),
+            Map.entry("static-var-compensators", "STATIC_VAR_COMPENSATOR"),
+            Map.entry("lcc-converter-stations", "LCC_CONVERTER_STATION"),
+            Map.entry("dangling-lines", "DANGLING_LINE"),
+            Map.entry("batteries", "BATTERY"),
+            Map.entry("hvdc-lines", "HVDC_LINE"),
+            Map.entry("3-windings-transformers", "THREE_WINDINGS_TRANSFORMER")
     );
-    // types allowed in step : get "type" equipment "id" with substation "sub"
-    public static final Map<String, String> EQPT_TYPES_2 = Map.ofEntries(
-            new AbstractMap.SimpleEntry<>("vsc-converter-stations", "HVDC_CONVERTER_STATION"),  // strange mapping
-            new AbstractMap.SimpleEntry<>("static-var-compensators", "STATIC_VAR_COMPENSATOR"),
-            new AbstractMap.SimpleEntry<>("lcc-converter-stations", "LCC_CONVERTER_STATION"),
-            new AbstractMap.SimpleEntry<>("dangling-lines", "DANGLING_LINE"),
-            new AbstractMap.SimpleEntry<>("batteries", "BATTERY"),
-            new AbstractMap.SimpleEntry<>("hvdc-lines", "HVDC_LINE"),
-            new AbstractMap.SimpleEntry<>("3-windings-transformers", "THREE_WINDINGS_TRANSFORMER")
-    );
-    public static final ArrayList<String> JSON_DATA_TYPES = new ArrayList<>(Arrays.asList("array", "object", "value"));
 
-    // all equipment type we can use in our "get equipment" steps
-    private final Map<String, String> equipmentMap;
+    // modification types
+    public static final Map<String, String> MODIF_TYPES = Map.ofEntries(
+            Map.entry("lines", "LINE_MODIFICATION"),
+            Map.entry("2-windings-transformers", "TWO_WINDINGS_TRANSFORMER_MODIFICATION"),
+            Map.entry("generators", "GENERATOR_MODIFICATION"),
+            Map.entry("loads", "LOAD"),
+            Map.entry("voltage-levels", "VOLTAGE_LEVEL_MODIFICATION"),
+            Map.entry("substations", "SUBSTATION_MODIFICATION"),
+            Map.entry("shunt-compensators", "SHUNT_COMPENSATOR_MODIFICATION"),
+            Map.entry("batteries", "BATTERY_MODIFICATION")
+    );
+
+    public static final Map<String, String> OPERATORS = Map.ofEntries(
+            Map.entry("+", "ADDITION"),
+            Map.entry("-", "SUBTRACTION"),
+            Map.entry("*", "MULTIPLICATION"),
+            Map.entry("/", "DIVISION"),
+            Map.entry("%", "PERCENTAGE")
+    );
+
+    // extensions
+    public static final Map<String, String> EXTENTION_KEYS = Map.ofEntries(
+            Map.entry("CGMES", ""),
+            Map.entry("XIIDM", "iidm.import.xml.included.extensions")
+    );
+
+    public static final ArrayList<String> JSON_DATA_TYPES = new ArrayList<>(Arrays.asList("array", "object", "value"));
 
     public static final Logger LOGGER = LoggerFactory.getLogger(TestContext.class);
 
     // --------------------------------------------------------
     public TestContext() {
-        equipmentMap = new HashMap<>(EQPT_TYPES_1);
-        equipmentMap.putAll(EQPT_TYPES_2);
     }
 
     public void init() {
@@ -100,10 +141,13 @@ public class TestContext {
         currentDirectoryIds = new HashMap<>();
         currentCaseIds = new HashMap<>();
         currentNodeIds = new HashMap<>();
+        currentRootNetworkIds = new HashMap<>();
         currentJsonData = new HashMap<>();
         currentContingencyListIds = new HashMap<>();
         currentFilterIds = new HashMap<>();
         tmpRootDirId = null;
+        configIntParameters = new HashMap<>();
+        currentCaseExtensions = new HashMap<>();
     }
 
     public void reset() {
@@ -118,6 +162,7 @@ public class TestContext {
         currentDirectoryIds = null;
         currentCaseIds = null;
         currentNodeIds = null;
+        currentRootNetworkIds = null;
         currentJsonData = null;
         currentContingencyListIds = null;
         currentFilterIds = null;
@@ -130,18 +175,10 @@ public class TestContext {
         return id;
     }
 
-    public String getDirId() {
-        return getDirId(CURRENT_ELEMENT);
-    }
-
     public String getCaseId(String name) {
         String id = currentCaseIds.getOrDefault(name, null);
         assertNotNull("no case " + name, id);
         return id;
-    }
-
-    public String getCaseId() {
-        return getCaseId(CURRENT_ELEMENT);
     }
 
     public String getStudyId(String name) {
@@ -150,18 +187,16 @@ public class TestContext {
         return id;
     }
 
-    public String getStudyId() {
-        return getStudyId(CURRENT_ELEMENT);
-    }
-
     public JsonNode getJsonData(String name) {
         JsonNode id = currentJsonData.getOrDefault(name, null);
         assertNotNull("no json data " + name, id);
         return id;
     }
 
-    public JsonNode getJsonData() {
-        return getJsonData(CURRENT_ELEMENT);
+    public JsonNode getCaseExtentions(String name) {
+        JsonNode id = currentCaseExtensions.getOrDefault(name, null);
+        assertNotNull("no case extension data " + name, id);
+        return id;
     }
 
     public Node getNodeId(String name) {
@@ -170,8 +205,8 @@ public class TestContext {
         return id;
     }
 
-    public Node getNodeId() {
-        return getNodeId(CURRENT_ELEMENT);
+    public RootNetwork getCurrentRootNetwork() {
+        return currentRootNetworkIds.get(CURRENT_ELEMENT);
     }
 
     public String getContingencyListId(String name) {
@@ -180,107 +215,135 @@ public class TestContext {
         return id;
     }
 
-    public String getContingencyListId() {
-        return getContingencyListId(CURRENT_ELEMENT);
-    }
-
     public String getFilterId(String name) {
         String id = currentFilterIds.getOrDefault(name, null);
         assertNotNull("no Filter " + name, id);
         return id;
     }
 
-    public String getFilterId() {
-        return getFilterId(CURRENT_ELEMENT);
-    }
-
     // --------------------------------------------------------
-    public void setStudy(String aliasName, String uuid) {
+    public void setCurrentStudy(String aliasName, String uuid) {
+        currentStudyIds.put(CURRENT_ELEMENT, uuid);
         currentStudyIds.put(aliasName, uuid);
     }
 
-    public void setCurrentStudy(String uuid) {
-        setStudy(CURRENT_ELEMENT, uuid);
-    }
-
-    public void setDirectory(String aliasName, String uuid) {
+    public void setCurrentDirectory(String aliasName, String uuid) {
+        currentDirectoryIds.put(CURRENT_ELEMENT, uuid);
         currentDirectoryIds.put(aliasName, uuid);
     }
 
-    public void setCurrentDirectory(String uuid) {
-        setDirectory(CURRENT_ELEMENT, uuid);
-    }
-
-    public void setCase(String aliasName, String uuid) {
+    public void setCurrentCase(String aliasName, String uuid) {
+        currentCaseIds.put(CURRENT_ELEMENT, uuid);
         currentCaseIds.put(aliasName, uuid);
     }
 
-    public void setCurrentCase(String uuid) {
-        setCase(CURRENT_ELEMENT, uuid);
-    }
-
-    public void setNode(String aliasName, String uuid, String studyId) {
+    public void setCurrentNode(String aliasName, String uuid, String studyId) {
+        currentNodeIds.put(CURRENT_ELEMENT, new Node(uuid, studyId));
         currentNodeIds.put(aliasName, new Node(uuid, studyId));
     }
 
-    public void setCurrentNode(String uuid, String studyId) {
-        setNode(CURRENT_ELEMENT, uuid, studyId);
+    public void setCurrentRootNetworkUuid(String uuid, String studyId) {
+        currentRootNetworkIds.put(CURRENT_ELEMENT, new RootNetwork(uuid, studyId));
     }
 
     public void setData(String aliasName, JsonNode data) {
         currentJsonData.put(aliasName, data);
     }
 
-    public void setContingencyList(String aliasName, String uuid) {
+    public void setCaseExtentions(String aliasName, JsonNode data) {
+        currentCaseExtensions.put(aliasName, data);
+    }
+
+    public void setCurrentContingencyList(String aliasName, String uuid) {
+        currentContingencyListIds.put(CURRENT_ELEMENT, uuid);
         currentContingencyListIds.put(aliasName, uuid);
     }
 
-    public void setCurrentContingencyList(String uuid) {
-        setContingencyList(CURRENT_ELEMENT, uuid);
-    }
-
-    public void setFilter(String aliasName, String uuid) {
+    public void setCurrentFilter(String aliasName, String uuid) {
+        currentFilterIds.put(CURRENT_ELEMENT, uuid);
         currentFilterIds.put(aliasName, uuid);
     }
 
-    public void setCurrentFilter(String uuid) {
-        setFilter(CURRENT_ELEMENT, uuid);
+    public String getEquipmentType(String equipmentType) {
+        assertTrue("Equipment type must be in " + EQPT_TYPES.keySet(), EQPT_TYPES.containsKey(equipmentType));
+        return EQPT_TYPES.get(equipmentType);
     }
 
-    public void checkEqptType1(String equipmentType) {
-        assertTrue("Equipment type must be in " + EQPT_TYPES_1.keySet(), EQPT_TYPES_1.containsKey(equipmentType));
+    public String getModificationType(String equipmentType) {
+        assertTrue("Equipment type must be in " + MODIF_TYPES.keySet(), MODIF_TYPES.containsKey(equipmentType));
+        return MODIF_TYPES.get(equipmentType);
     }
 
-    public void checkEqptType2(String equipmentType) {
-        assertTrue("Equipment type (with substation) must be in " + EQPT_TYPES_2.keySet(), EQPT_TYPES_2.containsKey(equipmentType));
+    public String getOperator(String operator) {
+        assertTrue("Operator must be in " + OPERATORS.keySet(), OPERATORS.containsKey(operator));
+        return OPERATORS.get(operator);
     }
 
-    public String checkEqptType(String equipmentType) {
-        assertTrue("Equipment type must be in " + equipmentMap.keySet(), equipmentMap.containsKey(equipmentType));
-        return equipmentMap.get(equipmentType);
+    public String getExtensionKey(String caseType) {
+        assertTrue("ExtensionKey must be in " + EXTENTION_KEYS.keySet(), EXTENTION_KEYS.containsKey(caseType));
+        return EXTENTION_KEYS.get(caseType);
     }
 
     // --------------------------------------------------------
-    public void createTmpRootDirectoryAs(String aliasName, String owner, boolean isPrivate) {
+    public void createTmpRootDirectoryAs(String aliasName, String owner, boolean noRemove) {
         String dirName = "bddtmp_" + UUID.randomUUID();
         LOGGER.info("Creating scenario temporary root dir '{}'", dirName);
-        tmpRootDirId = createRootDirectory(dirName, aliasName, isPrivate, "", owner);
+        String dirId = createRootDirectory(dirName, aliasName, "", owner);
+        if (!noRemove) {
+            tmpRootDirId = dirId;
+        }
     }
 
     // --------------------------------------------------------
-    public String createRootDirectory(String dirName, String aliasName, boolean isPrivate, String desc, String owner) {
-        String rootDirId = DirectoryRequests.getInstance().createRootDirectory(dirName, owner, isPrivate, desc);
+    public void createTmpDirectoryAs(String aliasName, String owner, boolean noRemove) {
+        createTmpDirectoryAs("bddtmp_", aliasName, owner, noRemove);
+    }
+
+    // --------------------------------------------------------
+    public void createTmpDirectoryAs(String tmpDirPrefix, String aliasName, String owner, boolean noRemove) {
+        String dirName = tmpDirPrefix + UUID.randomUUID();
+        String rootDirId = checkOrCreateRootDirectory(EnvProperties.getInstance().getTmpRootDir());
+        LOGGER.info("Creating scenario temporary dir '{}' in '{}'", dirName, EnvProperties.getInstance().getTmpRootDir());
+        String dirId = createDirectoryFromId(aliasName, dirName, rootDirId, owner);
+        if (!noRemove) {
+            tmpRootDirId = dirId;
+        }
+    }
+
+    // --------------------------------------------------------
+    public String checkOrCreateRootDirectory(String directoryName) {
+        String userName = EnvProperties.getInstance().getUserName();
+        String dirId = DirectoryRequests.getInstance().getRootDirectoryId(userName, directoryName);
+        if (dirId == null) {
+            dirId = createRootDirectory(directoryName, directoryName, "", userName);
+        } else {
+            setCurrentDirectory(directoryName, dirId);
+        }
+        return dirId;
+    }
+
+    // --------------------------------------------------------
+    public String createRootDirectory(String dirName, String aliasName, String desc, String owner) {
+        String rootDirId = DirectoryRequests.getInstance().createRootDirectory(dirName, owner, desc);
         assertNotNull("Could not create root directory " + dirName, rootDirId);
-        currentDirectoryIds.put(aliasName, rootDirId);
+        setCurrentDirectory(aliasName, rootDirId);
         return rootDirId;
     }
 
     // --------------------------------------------------------
-    public void createDirectory(String dirName, String parentName, boolean isPrivate, String owner) {
+    public void createDirectory(String dirName, String parentName, String owner) {
         String parentId = getDirId(parentName);
-        String dirId = DirectoryRequests.getInstance().createDirectory(dirName, parentId, isPrivate, owner);
+        String dirId = DirectoryRequests.getInstance().createDirectory(dirName, parentId, owner);
         assertNotNull("Could not create directory " + dirName + " in " + parentName, dirId);
-        currentDirectoryIds.put(dirName, dirId);
+        setCurrentDirectory(dirName, dirId);
+    }
+
+    // --------------------------------------------------------
+    public String createDirectoryFromId(String aliasName, String dirName, String parentId, String owner) {
+        String dirId = DirectoryRequests.getInstance().createDirectory(dirName, parentId, owner);
+        assertNotNull("Could not create directory " + dirName + " in parentId " + parentId, dirId);
+        setCurrentDirectory(aliasName, dirId);
+        return dirId;
     }
 
     // --------------------------------------------------------
@@ -309,37 +372,9 @@ public class TestContext {
         return Failsafe.with(retryPolicyDirectory).get(() -> DirectoryRequests.getInstance().getElementId(user, dirId, elementType, elementName));
     }
 
-    public void waitForStudyCreation(String studyName, String directoryName, int secondsTimeout) {
+    public void executeAndWaitForStudyCreation(Runnable asyncRequest, String studyName, String directoryName, int secondsTimeout) {
         String dirId = getDirId(directoryName);
-
-        // check element creation in target directory
-        String studyId = waitForElementCreation(dirId, "STUDY", studyName);
-        assertNotNull("Study not created in directory with name " + studyName, studyId);
-        currentStudyIds.put(studyName, studyId);
-
-        // check study creation completion
-        final String sId = studyId;
-        RetryPolicy<Boolean> retryPolicyStudy = new RetryPolicy<Boolean>()
-                .withDelay(Duration.ofMillis(1000))
-                .withMaxRetries(secondsTimeout)
-                .onRetriesExceeded(e -> LOGGER.warn("Waiting time exceeded"))
-                .handleResult(Boolean.FALSE);
-        LOGGER.info("Wait for '{}' study creation completion (max: {} sec)", studyName, retryPolicyStudy.getMaxRetries());
-        boolean studyExists = Failsafe.with(retryPolicyStudy).get(() -> StudyRequests.getInstance().existsStudy(sId));
-        assertTrue("Study full creation not confirmed", studyExists);
-
-        // make sure we can read the tree (existsStudy() can say "OK" because the study entity has been saved,
-        // but the 2 default nodes may still be in creation)
-        boolean ok = StudyRequests.getInstance().checkNodeTree(sId);
-        RetryPolicy<Boolean> retryPolicyTree = new RetryPolicy<Boolean>()
-                .withDelay(Duration.ofMillis(500))
-                .withMaxRetries(MAX_WAITING_TIME_IN_SEC)
-                .onRetriesExceeded(e -> LOGGER.warn("Waiting time exceeded"))
-                .handleResult(Boolean.FALSE);
-        LOGGER.info("Wait for '{}' default tree creation completion (max: {} sec)", studyName, retryPolicyStudy.getMaxRetries());
-        boolean treeExists = Failsafe.with(retryPolicyStudy).get(() -> StudyRequests.getInstance().checkNodeTree(sId));
-        assertTrue("Study tree full creation not confirmed", treeExists);
-
+        NotificationWaiter.executeAndWaitForStudyCreation(asyncRequest, studyName, dirId, secondsTimeout);
     }
 
     // --------------------------------------------------------
@@ -347,7 +382,7 @@ public class TestContext {
         String dirId = getDirId(directoryName);
         String user = EnvProperties.getInstance().getUserName();
         String eltId = DirectoryRequests.getInstance().getElementId(user, dirId, eltType, eltName);
-        assertNotNull("Cannot find " + eltType + " named " + eltName, eltId);
+        assertNotNull("Cannot find " + eltType + " named " + eltName + " in directory " + directoryName, eltId);
         return eltId;
     }
 
@@ -356,12 +391,13 @@ public class TestContext {
         // translate type before passing it to search REST API
         String eqptSearchType = "";
         if (!equipmentType.isEmpty()) {
-            eqptSearchType = equipmentMap.get(equipmentType);
+            eqptSearchType = EQPT_TYPES.get(equipmentType);
         }
         Node nodeIds = getNodeId(studyNodeName);
+        RootNetwork rootNetwork = getCurrentRootNetwork();
 
         boolean inUpstreamBuiltParentNode = false;  // Should search in upstream built node
-        JsonNode eqtData = StudyRequests.getInstance().searchEquipment(nodeIds.studyId, nodeIds.nodeId, equipmentName, fieldSelector, inUpstreamBuiltParentNode, eqptSearchType);
+        JsonNode eqtData = StudyRequests.getInstance().searchEquipment(nodeIds.studyId, rootNetwork.rootNetworkUuid, nodeIds.nodeId, equipmentName, fieldSelector, inUpstreamBuiltParentNode, eqptSearchType);
         assertNotNull("Equipment not found in network: " + equipmentName, eqtData);
         LOGGER.info("searchEquipment '{}' : '{}'", equipmentName, eqtData);
         assertTrue("Equipment data should be an array: " + equipmentName, eqtData.isArray());
@@ -369,12 +405,14 @@ public class TestContext {
     }
 
     // --------------------------------------------------------
-    private boolean statusMatching(String expectedStatus, String studyId, String nodeId, Computation compName) {
+    private boolean statusMatching(String expectedStatus, String studyId, String rootNetworkUuid, String nodeId, Computation compName) {
         switch (compName) {
             case LOADFLOW:
-                return expectedStatus.equalsIgnoreCase(StudyRequests.getInstance().getLoadFlowInfos(studyId, nodeId));
+                return expectedStatus.equalsIgnoreCase(StudyRequests.getInstance().getLoadFlowInfos(studyId, rootNetworkUuid, nodeId));
             case SECURITY_ANALYSIS:
-                return expectedStatus.equalsIgnoreCase(StudyRequests.getInstance().getSecurityAnalysisStatus(studyId, nodeId));
+                return expectedStatus.equalsIgnoreCase(StudyRequests.getInstance().getSecurityAnalysisStatus(studyId, rootNetworkUuid, nodeId));
+            case SENSITIVITY_ANALYSIS :
+                return expectedStatus.equalsIgnoreCase(StudyRequests.getInstance().getSensitivityStatus(studyId, rootNetworkUuid, nodeId));
             default:
                 assertTrue("bad computation name", true);
         }
@@ -383,6 +421,7 @@ public class TestContext {
 
     public boolean waitForStatusMatching(String computationStatus, String studyNodeName, Computation compName, int timeoutInSeconds) {
         Node nodeIds = getNodeId(studyNodeName);
+        RootNetwork rootNetwork = getCurrentRootNetwork();
 
         RetryPolicy<Boolean> retryPolicy = new RetryPolicy<Boolean>()
                 .withDelay(Duration.ofMillis(1000))
@@ -390,7 +429,7 @@ public class TestContext {
                 .onRetriesExceeded(e -> LOGGER.warn("Waiting time exceeded"))
                 .handleResult(Boolean.FALSE);
         LOGGER.info("Wait for {} completion with status '{}' (max: {} sec)", compName.name(), computationStatus, retryPolicy.getMaxRetries());
-        return Failsafe.with(retryPolicy).get(() -> statusMatching(computationStatus, nodeIds.studyId, nodeIds.nodeId, compName));
+        return Failsafe.with(retryPolicy).get(() -> statusMatching(computationStatus, nodeIds.studyId, rootNetwork.rootNetworkUuid, nodeIds.nodeId, compName));
     }
 
     // --------------------------------------------------------
@@ -422,7 +461,7 @@ public class TestContext {
             iterator.forEachRemaining(keys::add);
             listAttr = List.copyOf(keys);
         }
-        LOGGER.info("valuesEqualityList keys = '{}'", listAttr.toString());
+        LOGGER.info("valuesEqualityList keys = '{}'", listAttr);
 
         for (String k : listAttr) {
             assertTrue("Attribute " + k + " not found in alias " + values1Id, jsonValues1.has(k));
@@ -447,32 +486,6 @@ public class TestContext {
     }
 
     // --------------------------------------------------------
-    public void upsertEquipment(String equipmentType, String studyNodeName, String resourceFileName, boolean creation) {
-        assertTrue("Equipment type must be in " + equipmentMap.keySet(), equipmentMap.containsKey(equipmentType));
-        Node nodeIds = getNodeId(studyNodeName);
-
-        // just look into resources dir !
-        Path resourceFile = Paths.get("src", "test", "resources", resourceFileName);
-        assertTrue("Cannot find resource file named " + resourceFile.toFile().getAbsolutePath(),
-                Files.exists(resourceFile) && Files.isRegularFile(resourceFile));
-        String fileContent = Utils.readFileContent(resourceFile, -1);
-        assertTrue("Cannot read content from resource file named " + resourceFile.toFile().getAbsolutePath(), fileContent != null && fileContent.length() > 0);
-
-        StudyRequests.getInstance().upsertEquipment(nodeIds.studyId, nodeIds.nodeId, equipmentType, fileContent, creation);
-    }
-
-    // --------------------------------------------------------
-    public void createFilterIn(String elementName, String directoryName, String filterType) {
-        String dirId = getDirId(directoryName);
-        String user = EnvProperties.getInstance().getUserName();
-        ExploreRequests.getInstance().createDefaultFilter(elementName, "empty " + filterType + " filter", dirId, user, filterType);
-        // retrieve the element
-        String fId = waitForElementCreation(dirId, "FILTER", elementName);
-        assertNotNull("Filter not created in directory with name " + elementName, fId);
-        setFilter(elementName, fId);
-    }
-
-    // --------------------------------------------------------
     public void deleteNode(String studyNodeName, int expectedHttpCode) {
         Node nodeIds = getNodeId(studyNodeName);
         int httpCode = StudyRequests.getInstance().deleteNode(nodeIds.studyId, nodeIds.nodeId);
@@ -480,26 +493,28 @@ public class TestContext {
     }
 
     // --------------------------------------------------------
-    public void moveElement(String eltId, String targetDirName, int expectedHttpCode) {
-        int httpCode = DirectoryRequests.getInstance().moveElement(eltId, getDirId(targetDirName), EnvProperties.getInstance().getUserName());
+    public void moveElement(List<String> eltIds, String targetDirName, int expectedHttpCode) {
+        int httpCode = DirectoryRequests.getInstance().moveElement(eltIds, getDirId(targetDirName), EnvProperties.getInstance().getUserName());
         assertEquals("Move element unexpected http return code", expectedHttpCode, httpCode);
     }
 
     // --------------------------------------------------------
-    public void createNode(String newNodeName, String studyNodeName, String creationMode) {
+    public String createNode(String newNodeName, String studyNodeName, String creationMode) {
         Node nodeIds = getNodeId(studyNodeName);
-
-        StudyRequests.getInstance().createNode(nodeIds.studyId, nodeIds.nodeId, newNodeName, creationMode);
+        return StudyRequests.getInstance().createNode(nodeIds.studyId, nodeIds.nodeId, newNodeName, creationMode);
     }
 
     // --------------------------------------------------------
-    public void directoryAccess(String dirName, boolean isPrivate) {
+    public String createSecuritySequence(String studyNodeName) {
+        Node nodeIds = getNodeId(studyNodeName);
+        return StudyRequests.getInstance().createSequence(nodeIds.studyId, nodeIds.nodeId, "SECURITY_SEQUENCE");
+    }
+
+    // --------------------------------------------------------
+    public void directoryPresence(String dirName) {
         String dirId = getDirId(dirName);
         JsonNode data = DirectoryRequests.getInstance().getElementInfo(dirId);
         assertNotNull(data);
-        final String isPrivateKey = "/accessRights/isPrivate";
-        assertTrue("directory content must have " + isPrivateKey, data.at(isPrivateKey).isValueNode());
-        assertEquals(String.valueOf(isPrivate), data.at(isPrivateKey).asText());
     }
 
     // --------------------------------------------------------
@@ -510,5 +525,15 @@ public class TestContext {
         final String owner = "owner";
         assertTrue("element data must have " + owner, data.has(owner));
         assertTrue("element not owned by " + user, user.equalsIgnoreCase(data.get(owner).asText()));
+    }
+
+    // --------------------------------------------------------
+    public void setIntParameter(String paramName, int paramIntValue) {
+        configIntParameters.put(paramName, paramIntValue);
+    }
+
+    // --------------------------------------------------------
+    public int getIntParameter(String paramName, int defaultValue) {
+        return configIntParameters.getOrDefault(paramName, defaultValue);
     }
 }
